testsuite/tests/partial-sigs/should_fail/WildcardInForeignExport.stderr

WildcardInForeignExport.hs:6:37: error: [GHC-65507]
    Wildcard ‘_’ not allowed
      in the foreign declaration for ‘foo’
